ETSL-956 fixed tablet landscape mode title alignment issue

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/accordion/_accordion.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/accordion/_accordion.scss
@@ -148,7 +148,7 @@
       h6 {
         margin-bottom: toRem(36);
         margin-top: 0;
-        width: 75%;
+        width: 85%;
 
         @include respond-to-max($desktop) {
           margin-bottom: toRem(16);
